
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 OCT 21a
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - added COMBUSTIONMODEL_ZETTERVALL2017B
  * in model/chem/_C2H4_Air_Plasma_36s/
    - added zettervall2017b.c
  

2022 OCT 20b
  * in model/fluid/_Favre-Reynolds/fluid_source.c, model/fluid/_Navier-Stokes/fluid_source.c,
    model/fluid/_Navier-Stokes_perfect/fluid_source.c, model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Sstar(), added call to find_Sheatforces() and modified function accordingly
  * in model/share/fluid_share.c
    - added function find_Sheatforces()
    - in read_model_fluid_actions_Fbody_Qadd(), added (*np)[_ai(gl,i,j,k)].bs->QADD=TRUE
      and (*np)[_ai(gl,i,j,k)].bs->FBODY=TRUE; for all nodes where the body forces and
      heat added is initialized
  * in src/common.c
    - in create_node(), added np->bs->FBODY=FALSE; and np->bs->QADD=FALSE;
  * in src/common.h
    - in npbs_t, added bool FBODY,QADD
    

2022 OCT 20a
  * moved model/chem/_C2H4_Air_Plasma_30s/ to model/chem/_C2H4_Air_Plasma_36s/
  * in model/thermo/_generic/enthalpy.c, model/thermo/_generic/thermo.c, and
    model/transport/_Dixon-Lewis/transport.c
    - removed species CH2CHO
    - renamed species C3H6 to C3H6p
    - renamed species C3H7 to C3H7n
    - added species CH2(S), CH3CO, C3H4p, C3H3p1
    

2022 OCT 17a
  * in tools/chemkin2cfdwarp.c
    - fixed a few bugs and added code to read in the species from the CHEMKIN file
    
    
2022 OCT 14b
  * in src/common.c
    - in find_zone_intersection() and find_zone_from_argum() made sure ks,ke are given a value 
      even in 2D. This should not make any difference when running the code but eliminates a
      warning in valgrind


2022 OCT 14a
  * in cycle/share/cycle_share.c