@@ -1,0 +1,27 @@
+include ../../../.makefile-header
+
+LFLAGSLOCAL =  
+CCFLAGSLOCAL = $(CFLAGSCFD) -I../../../lib/include -I../../../.
+
+####### Files
+
+HEADERS =   chem.h 
+SOURCES =   chem.c 
+OBJECTS =   chem.o 
+TARGETS  = ../_chem.a
+
+
+####### Build rules
+
+all: src 
+
+src: $(OBJECTS) 
+
+arc: 
+	( rm -f $(TARGETS) ; ar cqs $(TARGETS) *.o )                        
+
+cleanall: clean
+
+	
+
+# DO NOT DELETE THIS LINE -- make depend depends on it.
