@@ -1,0 +1,77 @@
+// SPDX-License-Identifier: BSD-2-Clause
+/*
+Copyright 2022 Bernard Parent
+
+Redistribution and use in source and binary forms, with or without modification, are
+permitted provided that the following conditions are met:
+
+1. Redistributions of source code must retain the above copyright notice, this list of
+   conditions and the following disclaimer.
+
+2. Redistributions in binary form must reproduce the above copyright notice, this list
+   of conditions and the following disclaimer in the documentation and/or other
+   materials provided with the distribution.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY
+EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF 
+MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
+THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, 
+SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
+OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS 
+INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+*/
+
+#include <model/chem/_chem.h>
+#include <model/_model.h>
+#include <model/thermo/_thermo.h>
+#include <model/metrics/_metrics.h>
+
+void write_model_chem_template(FILE **controlfile){
+}
+
+
+void read_model_chem_actions(char *actionname, char **argum, SOAP_codex_t *codex){
+}
+
+
+void find_W ( gl_t *gl, spec_t rhok, double T, double Te, double Tv, double Estar, double Qbeam, spec_t W ) {
+  long spec;
+
+  for ( spec = 0; spec < ns; spec++ )
+    W[spec] = 0.0;
+
+}
+
+void find_dW_dx ( gl_t *gl, spec_t rhok, double T, double Te, double Tv, double Estar, double Qbeam,
+                  spec2_t dWdrhok, spec_t dWdT, spec_t dWdTe, spec_t dWdTv, spec_t dWdQbeam ) {
+  long k, s;                    /* counters */
+
+  for ( s = 0; s < ns; s++ ) {
+    dWdT[s] = 0.0;
+    dWdTe[s] = 0.0;
+    dWdTv[s] = 0.0;
+    dWdQbeam[s] = 0.0;
+    for ( k = 0; k < ns; k++ ) {
+      dWdrhok[s][k] = 0.0;
+    }
+  }
+
+}
+
+
+
+
+void find_Qei(gl_t *gl, spec_t rhok, double Estar, double Te, double *Qei){  
+  *Qei=0.0;
+}
+
+
+void find_dQei_dx(gl_t *gl, spec_t rhok, double Estar, double Te, spec_t dQeidrhok, double *dQeidTe){
+  long spec;
+  
+  for (spec=0; spec<ns; spec++) dQeidrhok[spec]=0.0;
+  *dQeidTe=0.0;  
+}
+
