@@ -75,6 +75,11 @@ void write_model_fluid_template(FILE **controlfile){
 #ifdef _2D
     "    AXISYMMETRIC=NO;\n"
 #endif
+    "    SetBodyForce(is,"if2DL("js,")if3DL("ks,")" ie,"if2DL("je,")if3DL("ke,")" 0.0{N/m3}"if2DL(",0.0{N/m3}")if3DL(",0.0{N/m3}")");\n"
+    "    SetHeatDeposited(is,"if2DL("js,")if3DL("ks,")" ie,"if2DL("je,")if3DL("ke,")" 0.0 {W/m3});\n"
+    "    {\n"
+    "    AddHeatPoint(0.0{x,m},"if2DL("0.0{y,m},")if3DL("0.0{z,m},")" 0.1{radius,m}, 0.0{W"if2D("/m")"});\n"
+    "    }\n"
     "  );\n"
   ,_FLUID_ACTIONNAME);
 
@@ -111,6 +116,7 @@ void write_cycle_fluid_template(FILE **controlfile){
 
 
 void read_model_fluid_actions_2(char *actionname, char **argum, SOAP_codex_t *codex){
+  read_model_fluid_actions_Fbody_Qadd(actionname, argum, codex);
 }
 
 
