@@ -8,6 +8,7 @@
 #define _FLUID_N2VIBMODEL TRUE
 #define _FLUID_EENERGY FALSE
 #define _FLUID_ACTIONNAME "FavreReynoldsTv"
+#define _FLUID_FBODY_QADD
 #define defaultinitvartypefluid 5
 #define totalinitvartypefluid 6
 #define FLUX_LAMBDA_CONVECTIVE 0
